fix toList and const